# parallel-programming

./: 111.cpp  linux .cpp  ss1-3.cpp  ss2.cpp  superscalar_linux.cpp  superscalar_x86.cpp  x86 stack.cpp
ASG/: CMakeLists.txt
ASG/ASG_arm/head/: Net.h  Parser.h
ASG/ASG_arm/source/: Net.cpp  Parser.cpp  Placement.cpp  main.cpp
ASG/head/: Placement.h
SIMD/: Groebner.cpp  SSE.cpp  neon.cpp
cache优化和超标量/: 111.cpp  ss0.cpp  ss1-2.cpp  x86 stack.cpp
openMP/ASG_arm/head/: Net.h  Placement.h
openMP/ASG_arm/source/: 1-7.spi  34696.spi  Parser.cpp  Placement.cpp  TimeRecord.h  a.out  main.cpp  test.sh
openMP/ASG_x86/: CMakeLists.txt
openMP/ASG_x86/head/: Net.h  Parser.h  Placement.h
openMP/ASG_x86/source/: Parser.cpp  Placement.cpp  main.cpp
pthread/ASG_arm/: CMakeLists.txt
pthread/ASG_arm/head/: Net.h
pthread/ASG_arm/source/: Parser.cpp  Placement.cpp  main.cpp
pthread/ASG_x86/source/: Placement.cpp
